--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/logo.png" />
+    <title>Attendify — Smart Attendance Tracker</title>
+    <meta name="theme-color" content="#2563EB" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>attendify</title>
   </head>
